<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MusicFragment"
    android:background="?attr/appbg"
    android:orientation="vertical">
    <!--本地音乐-->
    <RelativeLayout
        android:id="@+id/lyLocaMusic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
             android:layout_centerVertical="true"
            android:text="@string/local_music"
            android:drawablePadding="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableTint="?attr/image_tint"/>

        <TextView
            android:id="@+id/tvLocalMusicCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/grey500"
            android:textSize="@dimen/sp_12"
            android:layout_marginRight="@dimen/dp_10"
            android:drawableTint="?attr/image_tint"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:background="@color/colorDividerGray"/>

    <!--最近音乐-->
    <RelativeLayout
        android:id="@+id/lyRecentMusic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_recently"
            android:drawablePadding="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:text="@string/recent_music"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableTint="?attr/image_tint"/>

        <TextView
            android:id="@+id/tvRecentMusicCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_arrow_right"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/grey500"
            android:textSize="@dimen/sp_12"
            android:layout_marginRight="@dimen/dp_10"
            android:drawableTint="?attr/image_tint"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:background="@color/colorDividerGray"/>

    <!--我的喜爱-->
    <RelativeLayout
        android:id="@+id/lyMyLoveMusic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_love"
            android:drawablePadding="@dimen/dp_10"
            android:layout_centerVertical="true"
            android:text="@string/my_love"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableTint="?attr/image_tint"/>

        <TextView
            android:id="@+id/tvMyLoveCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_arrow_right"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/grey500"
            android:textSize="@dimen/sp_12"
            android:layout_marginRight="@dimen/dp_10"
            android:drawableTint="?attr/image_tint"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:background="@color/colorDividerGray"/>


</LinearLayout>