<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/appbg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popwin_name_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_10"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center_vertical"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:background="@color/colorDividerGray"></View>


    <!--<LinearLayout-->
        <!--android:id="@+id/popwin_add_rl"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dp_50"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:background="@drawable/selector_layout"-->
        <!--android:clickable="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
            <!--android:id="@+id/popwin_add_iv"-->
            <!--android:layout_width="@dimen/dp_25"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_margin="@dimen/dp_10"-->
            <!--android:src="@drawable/ic_phone"-->
            <!--android:tint="?attr/image_tint" />-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
                <!--android:id="@+id/popwin_add_tv"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="@integer/i_1"-->
                <!--android:gravity="center_vertical"-->
                <!--android:text="@string/add_to" />-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/dp_05"-->
                <!--android:background="?attr/divider"></View>-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/popwin_love_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_layout"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/popwin_love_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/ic_love"
            android:tint="?attr/image_tint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popwin_love_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="@integer/i_1"
                android:gravity="center_vertical"
                android:text="@string/add_love" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="?attr/divider"></View>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popwin_ring_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_layout"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/popwin_ring_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/ic_phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popwin_ring_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="@integer/i_1"
                android:gravity="center_vertical"
                android:text="@string/set_bell" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="?attr/divider"></View>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popwin_delete_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/selector_layout"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/popwin_delete_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_10"
            android:src="@drawable/ic_delete"
            android:tint="?attr/image_tint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popwin_delete_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="@integer/i_1"
                android:gravity="center_vertical"
                android:text="@string/delete" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="?attr/divider"></View>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popwin_cancel_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/selector_layout"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/popwin_cancel_iv"
            android:layout_width="@dimen/dp_25"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:src="@drawable/ic_cancel"
            android:tint="?attr/image_tint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popwin_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="@integer/i_1"
                android:gravity="center_vertical"
                android:text="@string/cancel" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_05"
                android:background="?attr/divider"></View>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>